Tue Jul 15 01:23:18 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConvWindow.cpp:
	* src/QGaimConvWindow.h:
	  - Added the new buttons to the conversation window.

Tue Jul 15 00:32:40 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* data/images/block.png:
	* data/images/close_conv.png:
	* data/images/formatting.png:
	* data/images/smileys.png:
	* data/images/warn.png:
	* gaim.pro:
	  - Added block, close conversation, formatting, smileys, and warn
	    button images.

Tue Jul 15 00:24:05 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConvWindow.cpp:
	* src/QGaimConvWindow.h:
	  - Removed the menubar in the conversation window and made the
	    toolbar more consistent with the other windows.

Mon Jul 14 21:32:39 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimAccountsWindow.cpp:
	* src/QGaimAccountsWindow.h:
	* src/QGaimConnectionMeter.cpp:
	* src/QGaimConnectionMeter.h:
	* src/main.cpp:
	  - Added connection progress bars to the Accounts window.

Mon Jul 14 19:17:53 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConnectionMeter.cpp:
	* src/QGaimConnectionMeter.h:
	* gaim.pro:
	  - Added the base of what will be the sign-on connection meters.

Mon Jul 14 16:18:18 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimAccountsWindow.cpp:
	  - The connect button is now greyed out while signing on.

Mon Jul 14 16:08:50 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConvButton.cpp:
	* src/QGaimConvWindow.cpp:
	* src/QGaimConvWindow.h:
	  - The conversation button is now enabled/disabled depending on
	    whether or not any conversations exist.
	  - Core conversation windows are now closed when the window is closed.

Mon Jul 14 04:35:12 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConvButton.cpp:
	  - The conversation button is now only enabled if there are any
	    active conversations.
