@@ -1,3 +1,9 @@
+Sun Jul 27 02:10:05 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
+
+	* src/QGaimConvWindow.cpp:
+	* src/QGaimConvWindow.h:
+	  - Conversations can now be closed.
+
 Tue Jul 15 01:23:18 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
 
 	* src/QGaimConvWindow.cpp:
